--- a/src/components/forms/LoginForm/style.css
+++ b/src/components/forms/LoginForm/style.css
@@ -2,16 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 0 auto;
     max-width: 50%;
     width: 100%;
-    flex: 1;
-    height: 80vh;
+    min-height: 80vh;
     position: relative;
     border-radius: 10px;
-    padding: 1rem;
+    padding: 2rem 1rem;
+    /* Increase padding for better spacing */
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+    overflow-y: auto;
+}
+
+.register-link {
+    color: #6366F1;
 }
 
 .login-button {
@@ -30,9 +35,35 @@
     background-color: #0056b3;
 }
 
+.welcoming-heading {
+    margin-bottom: 2rem;
+    /* Add space below the heading */
+    font-size: 2rem;
+    /* Make the heading a bit bigger if necessary */
+    text-align: center;
+    color: #6366F1;
+    /* Match the form button color */
+}
+
+
+/* Custom scrollbar */
+
+.login-form::-webkit-scrollbar {
+    width: 5px;
+}
+
+.login-form::-webkit-scrollbar-thumb {
+    background-color: #6366F1;
+    border-radius: 5px;
+}
+
+.login-form::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.1);
+}
+
 @media (max-width: 800px) {
     .login-form {
         max-width: 80%;
-        margin: 1rem auto
+        margin: 1rem auto;
     }
 }
