adding Single product and Cart Pages And other styling updates

--- a/src/components/CreateProductForm/style.css
+++ b/src/components/CreateProductForm/style.css
@@ -2,7 +2,7 @@
 
 .product-form-container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 2rem auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
