--- a/src/components/forms/LoginForm/style.css
+++ b/src/components/forms/LoginForm/style.css
@@ -1,17 +1,72 @@
+.login-page-container {
+    display: flex;
+    align-items: center;
+    max-height: 100vh;
+    max-width: 100vw;
+    gap: 2rem;
+}
+
+.login-image {
+    background: radial-gradient(50% 50% at 50% 50%, rgb(18, 38, 71) 0%, rgb(9, 14, 35) 100%);
+    flex: 1;
+    height: 100vh;
+    padding: 1rem;
+    display: grid;
+    place-items: center;
+    color: #fff;
+    overflow-x: hidden;
+}
+
+.login-form {
+    width: 100%;
+}
+
+.form-cont {
+    width: 50%;
+    padding-top: 2rem;
+}
+
+.login-image>h3 {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.color-text {
+    color: #15B79E;
+}
+
+@media screen and (max-width: 1100px) {
+    .login-page-container {
+        flex-direction: column;
+    }
+    .login-image {
+        width: 100%;
+    }
+    .login-image img {
+        width: 75%;
+    }
+    .login-form {
+        width: 90%;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+    }
+    .form-cont {
+        width: 90%;
+    }
+}
+
 .login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 0 auto;
-    max-width: 50%;
+    max-width: 80%;
     width: 100%;
     min-height: 80vh;
     position: relative;
     border-radius: 10px;
     padding: 2rem 1rem;
-    /* Increase padding for better spacing */
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     overflow-y: auto;
 }
 
@@ -29,6 +84,7 @@
     font-size: 17px;
     cursor: pointer;
     transition: all ease 0.1s;
+    margin: 1rem 0;
 }
 
 .login-button:hover {
@@ -37,16 +93,10 @@
 
 .welcoming-heading {
     margin-bottom: 2rem;
-    /* Add space below the heading */
     font-size: 2rem;
-    /* Make the heading a bit bigger if necessary */
     text-align: center;
     color: #6366F1;
-    /* Match the form button color */
 }
-
-
-/* Custom scrollbar */
 
 .login-form::-webkit-scrollbar {
     width: 5px;
@@ -63,7 +113,12 @@
 
 @media (max-width: 800px) {
     .login-form {
-        max-width: 80%;
-        margin: 1rem auto;
+        width: 100%;
+        height: fit-content;
+        margin: .5rem auto;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+    }
+    .login-image {
+        display: none;
     }
 }
