--- a/src/pages/Cart/style.css
+++ b/src/pages/Cart/style.css
@@ -59,6 +59,8 @@
 .cart-total {
     font-size: 1.2rem;
     margin-bottom: 10px;
+    text-align: center;
+    color: #4cae4c;
 }
 
 
@@ -66,8 +68,25 @@
 
 .cart-buttons {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 10px;
+}
+
+.cart-order-btn {
+    background-color: #4cae4c;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    font-size: 1rem;
+}
+
+.cart-order-btn:hover {
+    outline: 1px solid #4cae4c;
+    background-color: transparent;
+    color: #1c1c1c;
 }
 
 
@@ -75,6 +94,7 @@
 
 .cart-clear-btn {
     background-color: #d9534f;
+    font-size: 1rem;
     color: #fff;
     border: none;
     padding: 10px 15px;
