--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 * {
-    font-family: "Montserrat", sans-serif;
     box-sizing: border-box;
+    font-family: "Comfortaa", serif;
+    font-optical-sizing: auto;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    direction: rtl;
+}
+
+body {
+    overflow-x: hidden;
 }
