--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -16,6 +16,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
+    width: 90%;
+    margin: 1rem auto;
 }
 
 .order-item {
@@ -26,6 +28,13 @@
     width: 100%;
     max-width: 400px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: all .2s ease;
+    cursor: pointer;
+}
+
+.order-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .order-id,
