--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -12,6 +12,29 @@
     font-size: 1.8rem;
 }
 
+.order-filter-button {
+    display: block;
+    margin: 0 auto 20px auto;
+    padding: 10px 20px;
+    background-color: #6366f1;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.order-filter-button:hover {
+    background-color: #4e51ef;
+    outline: 2px solid #fff;
+}
+
+.order-filter-button.active {
+    background-color: #6366f1;
+}
+
 .order-list {
     display: flex;
     flex-wrap: wrap;
