--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -14,7 +14,6 @@
 
 .order-filter-button {
     display: block;
-    margin: 0 auto 20px auto;
     padding: 10px 20px;
     background-color: #6366f1;
     color: #fff;
@@ -36,11 +35,16 @@
 }
 
 .order-list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5rem;
     width: 90%;
     margin: 1rem auto;
+}
+
+.rev-btn-cont {
+    width: 90%;
+    margin: .5rem auto;
 }
 
 .order-item {
